--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.25.2
-scipy==1.11.2
-pandas==2.0.3
 plotly==5.16.1
 pyhtml2pdf==0.0.7
 kaleido==0.2.1
-lxml==4.9.2
-openpyxl==3.0.10
+numpy
+scipy
+pandas
+lxml
+openpyxl
