--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-plotly==5.16.1
+plotly==5.11.0
 pyhtml2pdf==0.0.7
 kaleido==0.2.1
+pandas>1.0,<2
 numpy
 scipy
-pandas
 lxml
 openpyxl
+beautifulsoup4>4,<5.0
+fastparquet<1.0
