--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 Results/
-
+vbas/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -152,5 +152,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-*.xlsm
 src/list_emails_test_Almeida.json
+.vscode/launch.json
